--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 - cpuclock: create a test to figure out how cpu interrupt are handled
 - when first run from cmake, the conan package get build before the header get installed
+- make test optional in conan/cmake
