added higher moments

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 - cpuclock: create a test to figure out how cpu interrupt are handled
 - when first run from cmake, the conan package get build before the header get installed
 - make test optional in conan/cmake
+- fix metrics/kurtosis
